[gd_scene load_steps=30 format=3 uid="uid://csckcocqivyj5"]

[ext_resource type="Script" path="res://Scripts/MainScene_Prototype02.gd" id="1_3wtai"]
[ext_resource type="PackedScene" uid="uid://d1ngk84wlraoa" path="res://Scenes/Player.tscn" id="2_83pmb"]
[ext_resource type="Texture2D" uid="uid://swwq4h0q8aui" path="res://Assets/2D/skybox/polyhaven_moonlit_golf_2k.hdr" id="3_ba04y"]
[ext_resource type="PackedScene" uid="uid://cikpxn4e0ls80" path="res://Assets/3D/Cabin/Cabin_v0.0.1.blend" id="4_wff7c"]
[ext_resource type="PackedScene" uid="uid://bhv1boykqvw23" path="res://Scenes/PlayerMovement/NavigationPoint.tscn" id="5_5eyhx"]
[ext_resource type="PackedScene" uid="uid://b68s0qxy7ri2k" path="res://Scenes/PlayerMovement/FocusPoint.tscn" id="6_uhtdf"]
[ext_resource type="PackedScene" uid="uid://dvdddw1tb55q" path="res://Assets/3D/Props/BloodVialEmpty_v0.0.0.blend" id="7_nqbqy"]
[ext_resource type="PackedScene" uid="uid://dppflreshnbo8" path="res://Assets/3D/Props/BloodVialSeparated_v0.0.0.blend" id="8_tlfij"]
[ext_resource type="PackedScene" uid="uid://tibfyewtauo3" path="res://Assets/3D/Props/BloodVial_v0.0.0.blend" id="9_ho7y3"]
[ext_resource type="PackedScene" uid="uid://bab13j6o8fp2l" path="res://Scenes/Fireplace.tscn" id="10_6u8tf"]
[ext_resource type="PackedScene" uid="uid://cnxvs6h6003rk" path="res://Scenes/Candle.tscn" id="11_llow7"]
[ext_resource type="PackedScene" uid="uid://ddvlmsgydjki2" path="res://Scenes/AlchemicalCircle.tscn" id="12_hwcwv"]
[ext_resource type="PackedScene" uid="uid://1ofvsxrma8iv" path="res://Scenes/Items/CeremonialKnife.tscn" id="13_auv7v"]
[ext_resource type="PackedScene" uid="uid://b3hkdu32yh165" path="res://Assets/3D/Props/Opal_v0.0.0.blend" id="14_7ctho"]
[ext_resource type="PackedScene" uid="uid://c334blq5lnfot" path="res://Scenes/Items/SaltBottle.tscn" id="14_ej30i"]
[ext_resource type="PackedScene" uid="uid://dl1o0hpwktapu" path="res://Assets/3D/Props/Sieve_v0.0.0.blend" id="15_p5chk"]
[ext_resource type="PackedScene" uid="uid://dm136mrn7n57f" path="res://Scenes/InteractionSystem/GenericPuzzleSlot.tscn" id="16_dsr2u"]
[ext_resource type="PackedScene" uid="uid://6hhogeucrtfh" path="res://Assets/3D/Props/CandeHolderWall.blend" id="16_irf7i"]
[ext_resource type="Resource" uid="uid://bc28owxb2cimb" path="res://Resources/Puzzles/GenericPuzzle.tres" id="17_4g4wa"]
[ext_resource type="PackedScene" uid="uid://biqkt2i023ui1" path="res://Assets/3D/Props/Laurel.blend" id="17_86e6w"]
[ext_resource type="PackedScene" uid="uid://c5icn5i3yr3x" path="res://Scenes/Items/PepperBottle.tscn" id="18_d3p6l"]
[ext_resource type="AudioStream" uid="uid://dmc2g4o60oago" path="res://Assets/Audio/Music/soundtrack_suspence.mp3" id="19_cy568"]
[ext_resource type="AudioStream" uid="uid://t622sra4diub" path="res://Assets/Audio/Sound/footsteps_wood_single_2.mp3" id="20_awg3m"]
[ext_resource type="AudioStream" uid="uid://dlwk5ak6u2vgr" path="res://Assets/Audio/Sound/storm_faded.mp3" id="21_nduse"]
[ext_resource type="AudioStream" uid="uid://c2pki04fd8067" path="res://Assets/Audio/Sound/fireplace_1.mp3" id="22_4qygc"]
[ext_resource type="PackedScene" uid="uid://sncutmva0ga2" path="res://Assets/3D/Props/Hand.blend" id="23_af127"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_tca5b"]
panorama = ExtResource("3_ba04y")
filter = false

[sub_resource type="Sky" id="Sky_fu3n5"]
sky_material = SubResource("PanoramaSkyMaterial_tca5b")

[sub_resource type="Environment" id="Environment_nps7j"]
background_mode = 1
background_color = Color(0, 0, 0.0470588, 1)
sky = SubResource("Sky_fu3n5")
sky_rotation = Vector3(0, -2.10836, 0)
tonemap_mode = 2
tonemap_exposure = 1.5
tonemap_white = 8.0

[node name="MainScenePrototype02" type="Node3D"]
script = ExtResource("1_3wtai")

[node name="Player" parent="." node_paths=PackedStringArray("current_navigation_point") instance=ExtResource("2_83pmb")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 2.87529, 1.43448, -1.35045)
rotation_edit_mode = 2
current_navigation_point = NodePath("../Navigation/NavigationPoints/StartingNavigationPoint")

[node name="Lights" type="Node3D" parent="."]

[node name="DirectionalLight3D_1" type="DirectionalLight3D" parent="Lights"]
transform = Transform3D(-0.106264, 0.460673, -0.881186, 0, 0.886204, 0.463296, 0.994338, 0.0492317, -0.0941715, 0, 0, 0)
light_color = Color(0.32549, 0.545098, 0.603922, 1)
light_energy = 0.4
shadow_enabled = true
shadow_opacity = 0.8

[node name="DirectionalLight3D_2" type="DirectionalLight3D" parent="Lights"]
transform = Transform3D(0.859852, 0.236533, -0.452445, 0, 0.886204, 0.463296, 0.510543, -0.398366, 0.762004, 0, 0, 0)
light_color = Color(0.270588, 0.196078, 0.701961, 1)
light_energy = 0.4
shadow_enabled = true
shadow_opacity = 0.8

[node name="DirectionalLight3D_3" type="DirectionalLight3D" parent="Lights"]
transform = Transform3D(-0.0139623, 0.114926, 0.993276, 0, 0.993373, -0.114937, -0.999903, -0.00160479, -0.0138698, 0, 0, 0)
light_color = Color(0, 0.196078, 0.701961, 1)
light_energy = 0.4
shadow_enabled = true
shadow_opacity = 0.8

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_nps7j")

[node name="Cabin_v0_0_0" parent="." instance=ExtResource("4_wff7c")]

[node name="Props" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.576236, 1.85896, -5.83088)

[node name="SaltBottle" parent="Props" instance=ExtResource("14_ej30i")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0.138681, -0.967916, 3.83881)

[node name="PepperBottle" parent="Props" instance=ExtResource("18_d3p6l")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -1.05524, -0.972415, 3.67445)

[node name="Navigation" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.928081, 0.647132, -5.18842)

[node name="NavigationPoints" type="Node3D" parent="Navigation"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.552707, 0, 0)

[node name="StartingNavigationPoint" parent="Navigation/NavigationPoints" node_paths=PackedStringArray("north_navigation_point", "west_navigation_point", "south_focus_point") instance=ExtResource("5_5eyhx")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, 0.8, 3.74955)
north_navigation_point = NodePath("../NavigationPoint3")
west_navigation_point = NodePath("../NavigationPoint1")
south_focus_point = NodePath("../../FocusPoints/FocusPointChest")

[node name="NavigationPoint1" parent="Navigation/NavigationPoints" node_paths=PackedStringArray("north_navigation_point", "east_navigation_point", "west_navigation_point") instance=ExtResource("5_5eyhx")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, 0.8, 5)
north_navigation_point = NodePath("../NavigationPoint4")
east_navigation_point = NodePath("../StartingNavigationPoint")
west_navigation_point = NodePath("../NavigationPoint2")

[node name="NavigationPoint2" parent="Navigation/NavigationPoints" node_paths=PackedStringArray("north_navigation_point", "east_navigation_point", "south_focus_point", "west_focus_point") instance=ExtResource("5_5eyhx")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, 0.8, 6.253)
north_navigation_point = NodePath("../NavigationPoint5")
east_navigation_point = NodePath("../NavigationPoint1")
south_focus_point = NodePath("../../FocusPoints/FocusPointHole")
west_focus_point = NodePath("../../FocusPoints/FocusPointSedia")

[node name="NavigationPoint3" parent="Navigation/NavigationPoints" node_paths=PackedStringArray("south_navigation_point", "west_navigation_point") instance=ExtResource("5_5eyhx")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.8, 3.74955)
south_navigation_point = NodePath("../StartingNavigationPoint")
west_navigation_point = NodePath("../NavigationPoint4")

[node name="NavigationPoint4" parent="Navigation/NavigationPoints" node_paths=PackedStringArray("north_navigation_point", "east_navigation_point", "south_navigation_point", "west_navigation_point") instance=ExtResource("5_5eyhx")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.8, 5)
north_navigation_point = NodePath("../NavigationPoint6")
east_navigation_point = NodePath("../NavigationPoint3")
south_navigation_point = NodePath("../NavigationPoint1")
west_navigation_point = NodePath("../NavigationPoint5")

[node name="NavigationPoint5" parent="Navigation/NavigationPoints" node_paths=PackedStringArray("north_navigation_point", "east_navigation_point", "south_navigation_point") instance=ExtResource("5_5eyhx")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.8, 6.253)
north_navigation_point = NodePath("../NavigationPoint7")
east_navigation_point = NodePath("../NavigationPoint4")
south_navigation_point = NodePath("../NavigationPoint2")

[node name="NavigationPoint6" parent="Navigation/NavigationPoints" node_paths=PackedStringArray("north_navigation_point", "south_navigation_point", "west_navigation_point", "east_focus_point") instance=ExtResource("5_5eyhx")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0.8, 5)
north_navigation_point = NodePath("../Lectern")
south_navigation_point = NodePath("../NavigationPoint4")
west_navigation_point = NodePath("../NavigationPoint7")
east_focus_point = NodePath("../../FocusPoints/FocusPointTable")

[node name="NavigationPoint7" parent="Navigation/NavigationPoints" node_paths=PackedStringArray("north_navigation_point", "east_navigation_point", "south_navigation_point", "west_focus_point") instance=ExtResource("5_5eyhx")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0.8, 6.253)
north_navigation_point = NodePath("../NavigationPoint9")
east_navigation_point = NodePath("../NavigationPoint6")
south_navigation_point = NodePath("../NavigationPoint5")
west_focus_point = NodePath("../../FocusPoints/FocusPointLibrary")

[node name="Lectern" parent="Navigation/NavigationPoints" node_paths=PackedStringArray("east_navigation_point", "south_navigation_point", "west_navigation_point", "north_focus_point") instance=ExtResource("5_5eyhx")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.5, 0.8, 5)
east_navigation_point = NodePath("../NavigationPoint10")
south_navigation_point = NodePath("../NavigationPoint6")
west_navigation_point = NodePath("../NavigationPoint9")
north_focus_point = NodePath("../../FocusPoints/FocusPointLectern")

[node name="NavigationPoint9" parent="Navigation/NavigationPoints" node_paths=PackedStringArray("east_navigation_point", "south_navigation_point", "north_focus_point", "west_focus_point") instance=ExtResource("5_5eyhx")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.5, 0.8, 6.253)
east_navigation_point = NodePath("../Lectern")
south_navigation_point = NodePath("../NavigationPoint7")
north_focus_point = NodePath("../../FocusPoints/FocusPointAngolo")
west_focus_point = NodePath("../../FocusPoints/FocusPointAngolo")

[node name="NavigationPoint10" parent="Navigation/NavigationPoints" node_paths=PackedStringArray("west_navigation_point", "east_focus_point") instance=ExtResource("5_5eyhx")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.5, 0.8, 3.74955)
west_navigation_point = NodePath("../Lectern")
east_focus_point = NodePath("../../FocusPoints/FocusPointWindow")

[node name="FocusPoints" type="Node3D" parent="Navigation"]

[node name="FocusPointTable" parent="Navigation/FocusPoints" instance=ExtResource("6_uhtdf")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -2.04234, 0.56229, 3.15789)

[node name="FocusCamera" parent="Navigation/FocusPoints/FocusPointTable" index="1"]
transform = Transform3D(-1.17398e-08, 0.681922, -0.731425, -2.98078e-08, 0.731425, 0.681922, 1, 2.98078e-08, 1.17398e-08, -0.92803, 0.595943, 0.007581)

[node name="FocusPointWindow" parent="Navigation/FocusPoints" instance=ExtResource("6_uhtdf")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -2.04234, 0.56229, 3.15789)

[node name="FocusCamera" parent="Navigation/FocusPoints/FocusPointWindow" index="1"]
transform = Transform3D(0, 0, -1, 0, 1, 0, 1, 0, 0, 0.0393779, 0.421286, -1.84633)

[node name="FocusPointChest" parent="Navigation/FocusPoints" instance=ExtResource("6_uhtdf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.14781, 0.0851541, 4.46798)

[node name="FocusCamera" parent="Navigation/FocusPoints/FocusPointChest" index="1"]
transform = Transform3D(-4.37722e-08, 0.5, -0.866025, 0, 0.866025, 0.5, 1, 2.18861e-08, -3.79078e-08, -0.695602, 0.389964, -0.597232)

[node name="FocusPointLibrary" parent="Navigation/FocusPoints" instance=ExtResource("6_uhtdf")]
transform = Transform3D(1.19249e-08, 0, -1, 0, 1, 0, 1, 0, 1.19249e-08, -2.2121, 0.398716, 6.64091)

[node name="FocusCamera" parent="Navigation/FocusPoints/FocusPointLibrary" index="1"]
transform = Transform3D(-4.21174e-08, 0.20412, -0.978946, -9.93963e-09, 0.978946, 0.20412, 1, 1.83274e-08, -3.92017e-08, -1.08839, 0.389964, 1.19209e-07)

[node name="FocusPointSedia" parent="Navigation/FocusPoints" instance=ExtResource("6_uhtdf")]
transform = Transform3D(-0.571988, 0, -0.820262, 0, 1, 0, 0.820262, 0, -0.571988, 1.93265, 0.461976, 6.49486)

[node name="FocusCamera" parent="Navigation/FocusPoints/FocusPointSedia" index="1"]
transform = Transform3D(0, 0.551296, -0.83431, 1.91616e-09, 0.83431, 0.551296, 1, 0, 2.98023e-08, -0.279488, -0.127799, 0.0429516)

[node name="FocusPointAngolo" parent="Navigation/FocusPoints" instance=ExtResource("6_uhtdf")]
transform = Transform3D(-0.661233, 0, -0.75018, 0, 1, 0, 0.75018, 0, -0.661233, -4.37098, 0.934046, 6.49486)

[node name="FocusCamera" parent="Navigation/FocusPoints/FocusPointAngolo" index="1"]
transform = Transform3D(0.000189483, 0.344534, -0.938774, 0.00499444, 0.938762, 0.34453, 0.999987, -0.00475393, -0.00154287, -0.385422, -0.127799, 0.024433)

[node name="FocusPointLectern" parent="Navigation/FocusPoints" instance=ExtResource("6_uhtdf")]
transform = Transform3D(-0.965672, 0.259763, 8.44218e-08, 0.259763, 0.965672, -2.27092e-08, -8.74228e-08, 0, -1, -4.42811, 0.869934, 5.10819)

[node name="FocusCamera" parent="Navigation/FocusPoints/FocusPointLectern" index="1"]
transform = Transform3D(-4.10045e-08, 0.664735, -0.747079, 2.65072e-08, 0.747079, 0.664735, 1, 7.45414e-09, -4.82539e-08, -0.418263, -0.0492154, -2.83122e-07)

[node name="FocusPointHole" parent="Navigation/FocusPoints" instance=ExtResource("6_uhtdf")]
transform = Transform3D(0.965473, -0.260505, 0, 0.260505, 0.965473, 0, 0, 0, 1, 3.82003, 0.00454384, 6.14579)

[node name="FocusCamera" parent="Navigation/FocusPoints/FocusPointHole" index="1"]
transform = Transform3D(-4.87482e-08, 0.20827, -0.978071, 2.75917e-09, 0.978071, 0.20827, 1, 7.45414e-09, -4.82539e-08, -0.674685, 0.132381, -2.98023e-07)

[node name="Objects" type="Node3D" parent="."]

[node name="Hand3" parent="Objects" instance=ExtResource("23_af127")]
transform = Transform3D(-0.02, 0, -3.01992e-09, 0, 0.02, 0, 3.01992e-09, 0, -0.02, -2.32003, 1.20541, 1.87744)

[node name="Opal_v0_0_0" parent="Objects/Hand3" instance=ExtResource("14_7ctho")]
transform = Transform3D(-0.129265, -0.208116, 14.8955, -8.93576, -4.48427, -0.311255, 4.48727, -8.93577, -0.190723, -0.332237, 4.32002, 1.21557)

[node name="Candle2" parent="Objects/Hand3" instance=ExtResource("11_llow7")]
transform = Transform3D(-16.4362, 0, 2.48179e-06, 0, 16.4362, 0, -2.48179e-06, 0, -16.4362, -1.93813, 7.58157, -1.98306)
energy_max = 0.12
energy_min = 0.14

[node name="Candle5" parent="Objects/Hand3" instance=ExtResource("11_llow7")]
transform = Transform3D(-16.4362, 0, 2.48179e-06, 0, 16.4362, 0, -2.48179e-06, 0, -16.4362, -0.716728, 8.03965, -1.98306)
energy_max = 0.12
energy_min = 0.14

[node name="Candle6" parent="Objects/Hand3" instance=ExtResource("11_llow7")]
transform = Transform3D(-16.4362, 0, 2.48179e-06, 0, 16.4362, 0, -2.48179e-06, 0, -16.4362, 0.583641, 7.57361, -1.98306)
energy_max = 0.12
energy_min = 0.14

[node name="Candle7" parent="Objects/Hand3" instance=ExtResource("11_llow7")]
transform = Transform3D(-16.4362, 0, 2.48179e-06, 0, 16.4362, 0, -2.48179e-06, 0, -16.4362, 1.83002, 7.00055, -1.98306)
energy_max = 0.12
energy_min = 0.14

[node name="CandeHolderWall" parent="Objects" instance=ExtResource("16_irf7i")]
transform = Transform3D(-5.24536e-08, 0, 1.2, 0, 1.2, 0, -1.2, 0, -5.24536e-08, 2.59873, 1.24595, 2.42971)

[node name="Laurel" parent="Objects/CandeHolderWall" instance=ExtResource("17_86e6w")]
transform = Transform3D(0.150977, 0.563457, 3.78283e-08, -5.09966e-08, -2.54983e-08, 0.583333, 0.563457, -0.150977, 4.26595e-08, 0.0787832, -0.305902, 0.00470829)

[node name="BloodVialEmpty_v0_0_0" parent="Objects" instance=ExtResource("7_nqbqy")]
transform = Transform3D(0.116276, 0, 0.0879257, 0, 0.145777, 0, -0.0879257, 0, 0.116276, 0.154347, 0.814066, 1.9059)

[node name="BloodVialSeparated_v0_0_0" parent="Objects" instance=ExtResource("8_tlfij")]
transform = Transform3D(0.099487, 0, 0.0147695, 0, 0.146, 0, -0.0101161, 0, 0.145251, 0.0126497, 0.812451, 1.88019)

[node name="BloodVial_v0_0_0" parent="Objects" instance=ExtResource("9_ho7y3")]
transform = Transform3D(0.139245, 0, -0.033903, 0, 0.143312, 0, 0.033903, 0, 0.139245, 0.103163, 0.811071, 1.79229)

[node name="Fireplace" parent="Objects" instance=ExtResource("10_6u8tf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.23415, 0.419572, 0.944369)

[node name="Candle" parent="Objects" instance=ExtResource("11_llow7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.10426, 0.700025, -2.17068)

[node name="Candle" parent="Objects/Candle" instance=ExtResource("11_llow7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.876379, 0.434826, 3.95531)

[node name="Candle2" parent="Objects" instance=ExtResource("11_llow7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.26041, 0.700025, -1.84998)

[node name="Candle3" parent="Objects" instance=ExtResource("11_llow7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.940461, 0.700025, -1.85113)

[node name="AlchemicalCircle" parent="Objects" instance=ExtResource("12_hwcwv")]

[node name="CeremonialKnife" parent="Objects" instance=ExtResource("13_auv7v")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -1.72841, 0.829068, -1.85508)

[node name="Sieve_v0_0_0" parent="Objects" instance=ExtResource("15_p5chk")]
transform = Transform3D(0.0529982, 0, 0.998595, 0, 1, 0, -0.998595, 0, 0.0529982, -0.44283, 0.804017, -1.51249)

[node name="GenericPuzzleSlot" parent="Objects/Sieve_v0_0_0" instance=ExtResource("16_dsr2u")]
transform = Transform3D(0.4, 0, 3.72529e-09, 0, 0.4, 0, -3.72529e-09, 0, 0.4, -0.000965953, 0.0321101, -0.260425)
related_puzzles = Array[Resource("res://Scripts/PuzzleSystem/Puzzle.gd")]([ExtResource("17_4g4wa")])

[node name="Audio" type="Node" parent="."]

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("19_cy568")
bus = &"Music"

[node name="Footsteps" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("20_awg3m")
bus = &"SFX"

[node name="ThunderStorm" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("21_nduse")
bus = &"SFX"

[node name="Fireplace" type="AudioStreamPlayer3D" parent="Audio"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.234, 0.42, 0.944)
stream = ExtResource("22_4qygc")
attenuation_model = 1
unit_size = 4.0
autoplay = true
bus = &"SFX"

[node name="Screams" type="AudioStreamPlayer" parent="Audio"]
bus = &"SFX"

[node name="Creaks" type="AudioStreamPlayer" parent="Audio"]
bus = &"SFX"

[node name="Timers" type="Node" parent="Audio"]

[node name="ThunderStormTimer" type="Timer" parent="Audio/Timers"]

[node name="ScreamTimer" type="Timer" parent="Audio/Timers"]

[node name="CreaksTimer" type="Timer" parent="Audio/Timers"]

[editable path="Navigation/FocusPoints/FocusPointTable"]
[editable path="Navigation/FocusPoints/FocusPointWindow"]
[editable path="Navigation/FocusPoints/FocusPointChest"]
[editable path="Navigation/FocusPoints/FocusPointLibrary"]
[editable path="Navigation/FocusPoints/FocusPointSedia"]
[editable path="Navigation/FocusPoints/FocusPointAngolo"]
[editable path="Navigation/FocusPoints/FocusPointLectern"]
[editable path="Navigation/FocusPoints/FocusPointHole"]
